--- a/src/main/webapp/GestaoEmpresas.xhtml
+++ b/src/main/webapp/GestaoEmpresas.xhtml
@@ -1,85 +1,49 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<meta charset="UTF-8"/>
 	<title>Gestão Empresas</title>
-	<h:outputStylesheet library="resouces" name="estilo.css" />
+	<h:outputStylesheet name="estilo.css" />
+	
+	<f:metadata>
+		<f:viewAction action="#{gestaoEmpresasController.obterEmpresas}" />
+	</f:metadata>
 </h:head>
 
 <h:body>
-	<header>
-<!--		<h:graphicImage library="" name="" />-->
-	</header>
-	
+	<h2>Listagem de Empresas</h2>
+
 	<div id="conteudo">
-		<h:form>
-			<h:panelGrid columns="2">
-				<h:outputLabel value="Razão Social: " for="rzSocial" />
-				<h:panelGroup>
-					<h:inputText id="rzSocial" value="#{gestaoEmpresasController.empresa.rzSocial}" 
-						label="Razão Social" required="true" />
-					<h:message for="rzSocial"/>
-				</h:panelGroup>
+		<p:dataTable value="#{gestaoEmpresasController.listaEmpresas}" var="empresa" emptyMessage="Nenhum registro encontrado">
+			<p:column headerText="Razão Social">
+				<h:outputText value="#{empresa.rzSocial}"/>
+			</p:column>
 
-				<h:outputLabel value="Nome Fantasia: " for="nomeFantasia"/>
-				<h:panelGroup>
-					<h:inputText id="nomeFantasia" value="#{gestaoEmpresasController.empresa.nomeFantasia}"  
-						label="Nome Fantasia" required="true"/>
-					<h:message for="nomeFantasia"/>
-				</h:panelGroup>
+			<p:column headerText="Nome Fantasia">
+				<h:outputText value="#{empresa.nomeFantasia}"/>
+			</p:column>
 
-				<h:outputLabel value="CNPJ: " for="cnpj" />
-				<h:panelGroup>
-					<h:inputText id="cnpj" value="#{gestaoEmpresasController.empresa.cnpj}"
-							label="CNPJ">
-						<f:validateLength minimum="18" maximum="18" />	
-					</h:inputText>
+			<p:column headerText="CNPJ">
+				<h:outputText value="#{empresa.cnpj}"/>
+			</p:column>
 
-					<h:message for="cnpj"/>
-				</h:panelGroup>
+			<p:column headerText="Tipo Empresa">
+				<h:outputText value="#{empresa.tipoEmpresa}"/>
+			</p:column>
 
-				<h:outputLabel value="Data Criação: " for="dataCriacao" />
-				<h:panelGroup>
-					<h:inputText id="dataCriacao" value="#{gestaoEmpresasController.empresa.dataCriacao}"
-						label="Data Criação"  required="true">
-						<f:convertDateTime pattern="dd/MM/yyyy" />	
-					</h:inputText>
-
-					<h:message for="dataCriacao"/>
-				</h:panelGroup>
-
-				<h:outputLabel value="Faturamento: " for="faturamento" />
-				<h:panelGroup>
-					<h:inputText id="faturamento" value="#{gestaoEmpresasController.empresa.faturamento}"
-						label="Faturamento">
-						<!--<f:convertNumber minFractionDigits="2" maxFractionDigits="2" />-->
-						<f:convertNumber pattern="#,##0.00" />
-						<f:validateDoubleRange minimum="0" />
-					</h:inputText>
-
-					<h:message for="faturamento" />
-				</h:panelGroup>
-
-				<h:outputLabel value="Tipo Empresa" for="tipoEmpresa" />
-				<h:panelGroup>
-					<h:selectOneMenu id="tipoEmpresa" value="#{gestaoEmpresasController.empresa.tipoEmpresa}" 
-						label="Tipo Empresa" required="true">
-						<f:selectItem itemLabel="Selecione..." />
-						<f:selectItems value="#{gestaoEmpresasController.tiposEmpresa}" 
-							 var="tipoEmpresaEnum" itemLabel="#{tipoEmpresaEnum.descricao}" itemValue="#{tipoEmpresaEnum}" />
-					</h:selectOneMenu>
-
-					<h:message for="tipoEmpresa" />
-				</h:panelGroup>
-
-				<h:outputLabel />
-				<h:commandButton value="Salvar" actionListener="#{gestaoEmpresasController.salvar}"/>
-			</h:panelGrid>
-		</h:form>
+			<p:column headerText="Ramo Atividade">
+				<h:outputText value="#{empresa.ramoAtividade.descricao}"/>
+			</p:column>
+		</p:dataTable>
 	</div>
+
+	<footer>
+		Desenvolvimento Web com JSF e PrimeFaces.
+	</footer>
 </h:body>
 
 </html>
