feat: implementação da ordenação da tabela de empreas com JSP

--- a/src/main/webapp/GestaoEmpresas.xhtml
+++ b/src/main/webapp/GestaoEmpresas.xhtml
@@ -18,29 +18,31 @@
 	<h2>Listagem de Empresas</h2>
 
 	<div id="conteudo">
-		<p:dataTable value="#{gestaoEmpresasController.listaEmpresas}" var="empresa" 
-				emptyMessage="Nenhum registro encontrado" paginator="true" rows="10"
-				paginatorPosition="bottom">
-			<p:column headerText="Razão Social">
-				<h:outputText value="#{empresa.rzSocial}"/>
-			</p:column>
-
-			<p:column headerText="Nome Fantasia">
-				<h:outputText value="#{empresa.nomeFantasia}"/>
-			</p:column>
-
-			<p:column headerText="CNPJ">
-				<h:outputText value="#{empresa.cnpj}"/>
-			</p:column>
-
-			<p:column headerText="Tipo Empresa">
-				<h:outputText value="#{empresa.tipoEmpresa}"/>
-			</p:column>
-
-			<p:column headerText="Ramo Atividade">
-				<h:outputText value="#{empresa.ramoAtividade.descricao}"/>
-			</p:column>
-		</p:dataTable>
+		<h:form>
+			<p:dataTable value="#{gestaoEmpresasController.listaEmpresas}" var="empresa" 
+					emptyMessage="Nenhum registro encontrado" paginator="true" rows="10"
+					paginatorPosition="bottom">
+				<p:column headerText="Razão Social" sortBy="#{empresa.rzSocial}">
+					<h:outputText value="#{empresa.rzSocial}"/>
+				</p:column>
+	
+				<p:column headerText="Nome Fantasia" sortBy="#{empresa.nomeFantasia}">
+					<h:outputText value="#{empresa.nomeFantasia}"/>
+				</p:column>
+	
+				<p:column headerText="CNPJ" sortBy="#{empresa.cnpj}">
+					<h:outputText value="#{empresa.cnpj}"/>
+				</p:column>
+	
+				<p:column headerText="Tipo Empresa" sortBy="#{empresa.tipoEmpresa.descricao}">
+					<h:outputText value="#{empresa.tipoEmpresa}"/>
+				</p:column>
+	
+				<p:column headerText="Ramo Atividade" sortBy="#{empresa.ramoAtividade.descricao}">
+					<h:outputText value="#{empresa.ramoAtividade.descricao}"/>
+				</p:column>
+			</p:dataTable>
+		</h:form>
 	</div>
 
 	<footer>
