feat: estilização da tela Gestão Empresas

--- a/src/main/webapp/GestaoEmpresas.xhtml
+++ b/src/main/webapp/GestaoEmpresas.xhtml
@@ -15,7 +15,9 @@
 </h:head>
 
 <h:body>
-	<h2>Listagem de Empresas</h2>
+	<header>
+		<h2 class="title-text">Empresas</h2>
+	</header>
 
 	<div id="conteudo">
 		<h:form>
@@ -46,7 +48,12 @@
 	</div>
 
 	<footer>
-		Desenvolvimento Web com JSF e PrimeFaces.
+		<div class="div-image">
+			<h:graphicImage class="tag-image" library="images" name="logo-SenaiB.svg"/>
+		</div>
+		<div class="text-footer">
+			Desenvolvimento Web com JSF e PrimeFaces.
+		</div>
 	</footer>
 </h:body>
 
