--- a/src/main/webapp/GestaoEmpresas.xhtml
+++ b/src/main/webapp/GestaoEmpresas.xhtml
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" 
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	template="WEB-INF/template/Layout.xhtml">
 
-<h:head>
-	<meta charset="UTF-8"/>
-	<title>Gestão Empresas</title>
-	<h:outputStylesheet name="estilo.css" />
+	<ui:define name="titulo">
+		Empresas
+	</ui:define>
+
+	<ui:define name="conteudo">
+		<f:metadata>
+			<f:viewAction action="#{gestaoEmpresasController.obterEmpresas}" />
+		</f:metadata>
 	
-	<f:metadata>
-		<f:viewAction action="#{gestaoEmpresasController.obterEmpresas}" />
-	</f:metadata>
-</h:head>
-
-<h:body>
-	<header>
-		<h2 class="title-text">Empresas</h2>
-	</header>
-
-	<div id="conteudo">
 		<h:form>
 			<p:dataTable value="#{gestaoEmpresasController.listaEmpresas}" var="empresa" 
 					emptyMessage="Nenhum registro encontrado" paginator="true" rows="10"
@@ -45,16 +40,7 @@
 				</p:column>
 			</p:dataTable>
 		</h:form>
-	</div>
+	
+	</ui:define>
 
-	<footer>
-		<div class="div-image">
-			<h:graphicImage class="tag-image" library="images" name="logo-SenaiB.svg"/>
-		</div>
-		<div class="text-footer">
-			Desenvolvimento Web com JSF e PrimeFaces.
-		</div>
-	</footer>
-</h:body>
-
-</html>
+</ui:composition>
